// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CreateSubtraction /> should render 1`] = `
<ModalDialog
  headerText="Create Subtraction"
  label="SubtractionCreate"
  onEnter={[Function]}
  onExited={[Function]}
  onHide={[MockFunction]}
  show={true}
>
  <form
    onSubmit={[Function]}
  >
    <Modal__DialogBody
      style={
        Object {
          "margin": "0 0 10px 0",
        }
      }
    >
      <InputError
        error=""
        label="Unique Name"
        name="subtractionId"
        onChange={[Function]}
        type="text"
        value=""
      />
      <InputError
        label="Nickname"
        name="nickname"
        onChange={[Function]}
        type="text"
        value=""
      />
      <h5>
        <strong>
          Files
        </strong>
      </h5>
      <Box__BoxGroup>
        <NoneFoundSection
          noun="files"
        >
          <Link
            to="/subtraction/files"
          >
            Upload some
          </Link>
        </NoneFoundSection>
      </Box__BoxGroup>
      <div
        className="input-form-error-none"
        style={
          Object {
            "margin": "3px 0 0 0",
          }
        }
      >
        None
      </div>
    </Modal__DialogBody>
    <Modal__DialogFooter
      className="modal-footer"
    >
      <Button
        bsStyle="primary"
        icon="play"
        pullRight={true}
        tipPlacement="top"
        type="submit"
      >
        Start
      </Button>
    </Modal__DialogFooter>
  </form>
</ModalDialog>
`;

exports[`<SubtractionFileItem /> should render when [active=false] 1`] = `
<Box__BoxGroupSection
  active={false}
  onClick={[Function]}
>
  <Create__SubtractionFileItemTop>
    <strong>
      test
    </strong>
    <span>
      Uploaded 
      <RelativeTime
        time="2018-02-14T17:12:00.000000Z"
      />
       by 
      test-user
    </span>
  </Create__SubtractionFileItemTop>
</Box__BoxGroupSection>
`;

exports[`<SubtractionFileItem /> should render when [active=true] 1`] = `
<Box__BoxGroupSection
  active={true}
  onClick={[Function]}
>
  <Create__SubtractionFileItemTop>
    <strong>
      test
    </strong>
    <span>
      Uploaded 
      <RelativeTime
        time="2018-02-14T17:12:00.000000Z"
      />
       by 
      test-user
    </span>
  </Create__SubtractionFileItemTop>
</Box__BoxGroupSection>
`;
